# bjoetiek-y-backend

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  README.md  db.xml  dev.sh  docker-compose.yml
.github/workflows/: test-build-publish.yml
database_model/: db.xml
docs/: index.html  openapi.yml
migrations/2020-12-23-185821_initial/: down.sql  up.sql
migrations/2021-01-19-180819_product_add_stock_remove_image/: down.sql  up.sql
migrations/2021-01-19-182159_manufacturer_and_category_drop_image_url/: down.sql  up.sql
migrations/2021-01-26-184510_explicit_foreign_key_on_actions/: down.sql  up.sql
src/: actions.rs  lib.rs  main.rs  models.rs  schema.rs
src/actors/: image.rs
src/api/: auth.rs  categories.rs  images.rs  manufacturers.rs  mod.rs  products.rs
src/db/: categories.rs  helpers.rs  manufacturers.rs  mod.rs  products.rs
src/models/: category.rs  config.rs  image.rs  manufacturer.rs  mod.rs  product.rs
