[package]
name = "bjoetiek"
version = "1.0.0"
edition = "2018"

[dependencies]
actix = "0.11"
actix-cors = "0.5"
actix-files = "0.5"
actix-multipart = "0.3"
actix-web = "3"
actix-web-middleware-keycloak-auth = "0.3"
convert_case = "0.4"
diesel = { version = "1.4", features = ["postgres", "r2d2", "uuidv07", "chrono"] }
diesel_migrations = "1.4"
dotenv = "0.15"
failure = "0.1"
futures = "0.3"
image = "0.23"
lazy_static = "1.4"
log = "0.4"
pretty_env_logger = "0.4"
r2d2 = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
unicode-normalization = "0.1"
url = "2.2"
uuid = { version = "0.8", features = ["serde", "v4"] }

[dependencies.chrono]
version = "0.4"
default-features = false
features = ["std", "clock", "serde"]